@@ -4,7 +4,7 @@ import time
 from multiprocessing import Queue
 from collections import deque
 from src.util.imports.random import random
-from src.util.imports.num import np
+from src.util.imports.numpy import np
 
 
 class Actor:
