@@ -2,7 +2,7 @@ import gym
 from gym.spaces.box import Box
 from gym.wrappers import TimeLimit, Monitor
 from torch.autograd.grad_mode import no_grad
-from src.util.imports.num import np
+from src.util.imports.numpy import np
 import cv2
 from src.module.context import Profile as P
 
