@@ -1,5 +1,5 @@
 # from ctypes import sizeof
-# from src.util.imports.num import np
+# from src.util.imports.numpy import np
 # from src.module.agent.memory.indexer import Indexer
 # from multiprocessing import Pool, Process, Value, Queue, Lock, Manager
 # from src.module.env.atari import Atari
